Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.109     2015-12-02 02:59:09Z
          - avoid importing Test::Deep::none, to avoid clashing with
            List::Util
          - strip ANSI colours when testing release output

0.108     2015-11-12 04:55:28Z
          - drop dots after URLs in CONTRIBUTING, which broke hyperlinking
          - switch from [GenerateFile::ShareDir] to
            [GenerateFile::FromShareDir]

0.107     2015-10-14 01:29:39Z
          - bump prereq version for [PodSyntaxTests], [PodCoverageTests] for
            the new xt/author placement

0.106     2015-10-11 00:00:09Z
          - bump prereq version for [InstallGuide] (RT#107659)
          - bump prereq version for [Test::PodSpelling] (RT#107660)

0.105     2015-09-27 17:23:09Z
          - fix cleanup of old LICENSE file after moving it to LICENCE during
            release (broken in 0.103)
          - fix declared version dependency on [Test::Kwalitee], to ensure it
            has the "filename" configuration option (RT#107362)

0.104     2015-09-19 21:48:10Z
          - add a L<> around the support mailing list address woven into pod
          - automatically use "LICENCE" rather than "LICENSE" in distributions
            with first-come maintainers who are not Americans

0.103     2015-09-04 02:22:42Z
          - switch to [MungeFile] for munging
            Dist::Zilla::MintingProfile::Author::ETHER and its data files
            during the build
          - weave a standard SUPPORT section into pod, appending it to any
            existing content in that section

0.102     2015-08-15 02:15:25Z
          - declare proper prereq version for Pod::Weaver::Section::Legal
          - switch from one hacky mechanism to determine the 'Legal' pod
            header to another hacky mechanism, but at least this one is more
            likely to do what I want
          - use :PerlExecFiles in [Test::Compile]